--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ inputs:
 runs:
   using: composite
   steps:
-    - id: Install dependencies
+    - name: Install dependencies
       run: |
         echo "##[group]Install luacheck"
         echo "##[command]apt-get install -yq luarocks"
@@ -26,18 +26,18 @@ runs:
         sudo luarocks install luacheck lanes
         echo "##[endgroup]"
       shell: bash
-    - id: Install .luacheckrc
+    - name: Install .luacheckrc
       run: |
         [ -z "${{ inputs luacheckrc }}" ] && exit 0
         echo "##[group]Install .luacheckrc"
         mkdir -p ~/.config/luacheck
         echo "##[command]curl -fsSL ${{ inputs.luacheckrc }}"
         curl -fsSL ${{ inputs.luacheckrc }} > ~/.config/luacheck/.luacheckrc || {
-          echo "##[error]Unable to download .luacheckrc from \"${{ inputs.luacheckrc }}\""
+          echo "Unable to download .luacheckrc from \"${{ inputs.luacheckrc }}\""
           exit 1
         }
         echo "##[endgroup]"
       shell: bash
-    - id: Run luacheck
+    - name: Run luacheck
       run: luacheck ${{ inputs.path }} ${{ inputs.args }}
       shell: bash
