--- a/action.yml
+++ b/action.yml
@@ -19,14 +19,15 @@ runs:
   steps:
     - name: Install luacheck
       run: |
-        hash luacheck &>/dev/null && exit 0
         echo "##[group]Install luacheck"
-        echo "##[command]apt-get install -yq luarocks"
-        sudo apt-get install -yq luarocks
-        echo "##[command]luarocks install luacheck"
-        sudo luarocks install luacheck
-        echo "##[command]luarocks install lanes"
-        sudo luarocks install lanes
+        if ! hash luacheck &>/dev/null; then
+          echo "##[command]apt-get install -yq luarocks"
+          sudo apt-get install -yq luarocks
+          echo "##[command]luarocks install luacheck"
+          sudo luarocks install luacheck
+          echo "##[command]luarocks install lanes"
+          sudo luarocks install lanes
+        fi
         echo "##[command]luacheck --version"
         luacheck --version
         echo "##[endgroup]"
