--- a/action.yml
+++ b/action.yml
@@ -34,12 +34,14 @@ inputs:
     required: false
   annotate:
     description: >
-      Emits annotations for source code at locations parsed from the output.
-      Must be set to "none", "warning" or "error".
+      Emit annotations for source code at locations parsed from the output.
 
-      Requires that output of warnings not be suppressed through the -qq or -qqq arguments.
+      Requires showing warning codes (--codes) and that the output of warnings
+      not be suppressed through the -qq or -qqq arguments.
+
+      Defaults to true.
     required: false
-    default: none
+    default: true
 runs:
   using: composite
   steps:
@@ -63,27 +65,7 @@ runs:
         }
       shell: bash
     - run: |
-        annotate() {
-          case "${{ inputs.annotate }}" in
-            warning|error)
-              # Search for "<path>:<line>:<col>: <message>" lines in the output,
-              # trim whitespace, and reformat them to workflow commands.
-              awk -F':' -v level="${{ inputs.annotate }}" '
-                { print $0 }
-
-                /^\s+.+?:[0-9]+:[0-9]+:/ {
-                  gsub(/^\s+|\s+$/, "")
-                  gsub(/^\s+/, "", $4)
-
-                  printf "::%s file=%s,line=%s,col=%s::%s\n", level, $1, $2, $3, $4
-                }'
-                ;;
-            *)
-              cat
-              ;;
-          esac
-        }
-
-        luacheck ${{ inputs.args }} -- ${{ inputs.files }} | annotate
+        [[ "${{ inputs.annotate }}" == "true" ]] && echo "::add-matcher::luacheck-problem-matcher.json"
+        luacheck ${{ inputs.args }} -- ${{ inputs.files }}
       working-directory: ${{ inputs.path }}
       shell: bash
